[project]
name = "comfydock"
version = "0.1.6"
description = "ComfyDock CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "comfydock-server",
    "python-dotenv>=1.0.1",
]

[project.scripts]
comfydock = "comfydock.cli:main"

[tool.uv.sources]
comfydock-server = { git = "https://github.com/ComfyDock/ComfyDock-Server.git" }
